--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'org.stapledon'
 version '1.0-SNAPSHOT'
+
+mainClassName = "org.stapledon.cacher.ComicCacher"
 
 sourceCompatibility = 1.8
 
@@ -12,5 +15,18 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+}
+
+application {
+    mainClassName = mainClassName
 }
