--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,10 +2,10 @@ image: java:8-jdk
 
 stages:
   - build
-  - test
   
 before_script:
-  - export GRADLE_USER_HOME=`pwd`/.gradle  
+  - export GRADLE_USER_HOME=`pwd`/.gradle
+  - chmod +x ./gradlew  
 
 build:
   stage: build
@@ -14,14 +14,11 @@ build:
   artifacts:
     paths:
       - build/libs/*.jar
+    reports:
+      junit: build/test-results/test/TEST-*.xml      
     expire_in: 1 week
   only:
     - master
-
-test:
-  stage: test
-  script:
-    - ./gradlew check
-  artifacts:
-    reports:
-      junit: build/test-results/test/TEST-*.xml
+      
+variables:
+  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
