--- a/build.gradle
+++ b/build.gradle
@@ -15,13 +15,13 @@ repositories {
 }
 
 dependencies {
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
-    compile group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.23'
+    implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+    implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'commons-io', name: 'commons-io', version: '2.6'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'commons-io', name: 'commons-io', version: '2.6'
 }
 
 jar {
