--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ cache:
 build:
   stage: build
   script:
-    - ./gradlew build --debug
+    - ./gradlew build
   artifacts:
     paths:
       - build/libs/*.jar
