--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation project(":ComicObjects")
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation group: 'commons-io', name: 'commons-io', version: '2.6'
