--- a/ComicCacher/build.gradle
+++ b/ComicCacher/build.gradle
@@ -1,18 +1,9 @@
-plugins {
-    id 'java'
-    id 'application'
-}
+apply plugin: 'application'
 
 group 'com.stapledon'
 version '1.0-SNAPSHOT'
 
 mainClassName = "com.stapledon.cacher.ComicCacher"
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
 
 dependencies {
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
@@ -30,6 +21,7 @@ jar {
         attributes 'Main-Class': mainClassName
     }
 }
+
 
 application {
     mainClassName = mainClassName
