--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,8 +1,3 @@
-# This is a sample build configuration for Java (Gradle).
-# Check our guides at https://confluence.atlassian.com/x/zd-5Mw for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: openjdk:8
 
 pipelines:
@@ -10,7 +5,11 @@ pipelines:
     - step:
         caches:
           - gradle
-        script: # Modify the commands below to build your repository.
-          # You must commit the Gradle wrapper to your repository
-          # https://docs.gradle.org/current/userguide/gradle_wrapper.html
+          - gradlewrapper
+        script:
+          - export GRADLE_OPTS='-Dorg.gradle.daemon=false'
           - bash ./gradlew build
+
+definitions:
+  caches:
+    gradlewrapper: ~/.gradle/wrapper
