Save artifacts from the build

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,9 @@ pipelines:
         script:
           - export GRADLE_OPTS='-Dorg.gradle.daemon=false'
           - bash ./gradlew build
+        artifacts:
+          - ./**/test-results/**/*.xml
+          - ./**/build/libs/*.jar
 
 definitions:
   caches:
