Temporarily disabling test while figuring out what's wrong with the pipeline build

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
         script:
           - export GRADLE_OPTS='-Dorg.gradle.daemon=false'
           - bash ./gradlew build
+          - pwd
         artifacts:
           - ./**/test-results/**/*.xml
           - ./**/build/libs/*.jar
