--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -1,16 +1,15 @@
 buildscript {
 	ext {
-		springBootVersion = '2.1.2.RELEASE'
+		snippetsDir = file('build/generated-snippets')
 	}
 	repositories {
 		mavenCentral()
-		maven {
-			url "https://plugins.gradle.org/m2/"
-		}
+		maven { url "https://plugins.gradle.org/m2/" }
 	}
 	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath("gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.21.0")
+		classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.1.2.RELEASE'
+		classpath 'gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.21.0'
+		classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.9.2'
 	}
 }
 
@@ -18,12 +17,14 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.palantir.docker'
+apply plugin: 'org.asciidoctor.convert'
+
 
 group = 'kkdad'
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation project(":ComicObjects")
@@ -31,6 +32,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
 }
 
 bootJar {
@@ -46,4 +48,14 @@ docker {
 	name "${project.group}/${bootJar.baseName}"
 	copySpec.from(tasks.unpack.outputs).into("dependency")
 	buildArgs(['DEPENDENCY': "dependency"])
+}
+
+
+test {
+	outputs.dir snippetsDir
+}
+
+asciidoctor {
+	inputs.dir snippetsDir
+	dependsOn test
 }
