--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'com.google.guava:guava:27.1-jre'
 	implementation project(":ComicObjects")
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
