Don't commit docker images
Former-commit-id: edf74180163873a941cf53e0c2f6ce20c96a0036

--- a/.gitignore
+++ b/.gitignore
@@ -155,4 +155,7 @@ gradle-app.setting
 ### Gradle Patch ###
 **/build/
 
+## Saved Docker Images
+*.docker
+
 # End of https://www.gitignore.io/api/java,gradle,angular,intellij
