--- a/ComicViewer/angular.json
+++ b/ComicViewer/angular.json
@@ -23,6 +23,7 @@
               "src/assets"
             ],
             "styles": [
+              { "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css" },
               "src/styles.css"
             ],
             "scripts": []
@@ -81,6 +82,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
+              { "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css" },
               "src/styles.css"
             ],
             "scripts": [],
