Coimbine Cacher & API projects
Former-commit-id: a632ac5783d4e7a73c7b5e5bb8f7e3a51b6dcfd1

--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -45,7 +45,7 @@ jar {
 }
 
 bootJar {
-	baseName = 'comic-api'
+	baseName = 'api-api'
 	dependsOn asciidoctor 
 	from ("${asciidoctor.outputDir}/html5") {
 		into 'static/docs'
