--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -28,12 +28,19 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.guava:guava:27.1-jre'
-	implementation project(":ComicObjects")
+
+	implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
+	implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
+	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+	implementation 'com.google.code.gson:gson:2.8.5'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
+	testImplementation group: 'junit', name: 'junit', version: '4.12'
+	testImplementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
 	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:1.2.6.RELEASE'
 }
 
