--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
 	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
 
+	implementation(project(':ComicViewer'))
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
@@ -49,11 +51,15 @@ jar {
 	}
 }
 
+
 bootJar {
 	baseName = 'comic-api'
-	dependsOn asciidoctor 
+	dependsOn asciidoctor, ':ComicViewer:buildComicViewer'
 	from ("${asciidoctor.outputDir}/html5") {
 		into 'static/docs'
+	}
+	from ("../ComicViewer/dist/ComicViewer") {
+		into 'static'
 	}
 }
 
@@ -81,4 +87,13 @@ asciidoctor {
 
 application {
 	mainClassName = "org.stapledon.cacher.ComicCacher"
+}
+
+task list {
+	doLast {
+		FileTree tree = fileTree('../ComicViewer/dist')
+		tree.each {
+			println it.name
+		}
+	}
 }
