--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -7,7 +7,10 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "buildProd": "ng build --prod",
+    "buildDev": "ng build",
+    "buildWatch": "ng build --watch=true"
   },
   "private": true,
   "dependencies": {
