--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -29,8 +29,8 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.8.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.guava:guava:27.1-jre'
-	implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
-	implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+	implementation 'org.jsoup:jsoup:1.11.3'
+	implementation 'log4j:log4j:1.2.17'
 
 	implementation(project(':ComicViewer'))
 
@@ -38,8 +38,13 @@ dependencies {
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
-	testImplementation group: 'junit', name: 'junit', version: '4.12'
-	testImplementation group: 'commons-io', name: 'commons-io', version: '2.6'
+
+	testCompile 'junit:junit:4.12'
+//	testCompile 'org.mockito:mockito-all:1.10.19'
+	testCompile 'org.powermock:powermock-module-junit4:2.0.0'
+	testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
+
+	testImplementation 'commons-io:commons-io:2.6'
 
 	asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:1.2.6.RELEASE'
 }
@@ -86,7 +91,7 @@ asciidoctor {
 
 
 application {
-	mainClassName = "org.stapledon.cacher.ComicCacher"
+	mainClassName = "org.stapledon.downloader.ComicCacher"
 }
 
 task list {
