--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8888
 #debug=true
 spring.security.user.name=user
 spring.security.user.password=voicebox1@
+spring.output.ansi.enabled=always
+spring.profiles.active=production
