Fix null pointer found by Kevin, removed redundant caching-only entrypoint
Former-commit-id: 84f046ee89f10ada5c41b0a54b6c6a3de56a5158

--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -91,16 +91,10 @@ asciidoctor {
 	dependsOn test
 }
 
-
-application {
-	mainClassName = "org.stapledon.downloader.ComicCacher"
+bootRun  {
+	dependsOn clean
+	mainClassName = "org.stapledon.api.ComicApiApplication"
 }
 
-task list {
-	doLast {
-		FileTree tree = fileTree('../ComicViewer/dist')
-		tree.each {
-			println it.name
-		}
-	}
-}
+// Keep from confusing anyone with two run targets - SpringBoot adds the BootRun target
+tasks.remove(run)
