Added code to update stats.db for each comic to speed up later retrieval for large repositories
Former-commit-id: dcd86631b7e141659f5abfffbc1be55178074542

--- a/ComicAPI/Dockerfile
+++ b/ComicAPI/Dockerfile
@@ -1,17 +1,13 @@
 FROM openjdk:8-jdk-alpine
-MAINTAINER adrian@gilbert.ca
+LABEL MAINTAINER="adrian@gilbert.ca"
 VOLUME /tmp
 ARG DEPENDENCY=target/dependency
-
-COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY ${DEPENDENCY}/META-INF /app/META-INF
-COPY ${DEPENDENCY}/BOOT-INF/classes /app
-COPY ${DEPENDENCY}/static /app/static
 
 EXPOSE 8888
 
 ENTRYPOINT ["java", "-cp", "app:app/lib/*", "org.stapledon.api.ComicApiApplication"]
 
-# To figure out what is going on inside the container
-# docker ps
-# winpty docker exec -it <container name> bash
+COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY ${DEPENDENCY}/META-INF /app/META-INF
+COPY ${DEPENDENCY}/BOOT-INF/classes /app
+COPY ${DEPENDENCY}/static /app/static
