--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "codelyzer": "^6.0.2",
     "component": "^1.1.0",
     "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
@@ -40,7 +41,6 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^6.3.16",
