--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comic-viewer",
-  "version": "0.0.0",
+  "version": "1.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,13 +15,14 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^9.2.4",
-    "@angular/cdk-experimental": "^9.2.4",
+    "@angular/cdk": "^11.2.13",
+    "@angular/cdk-experimental": "^11.2.4",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
+    "@angular/compiler-cli": "^11.2.14",
     "@angular/core": "~11.2.14",
     "@angular/forms": "~11.2.14",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
@@ -35,19 +36,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/cli": "~11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
+    "@angular/cli": "^11.2.19",
     "@angular/language-service": "~11.2.14",
     "@types/jasmine": "~2.8.8",
-    "@types/jasminewd2": "^2.0.8",
+    "@types/jasminewd2": "~2.0.8",
     "@types/node": "~8.9.4",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-core": "~4.3.0",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "~3.1.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
