--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -24,7 +24,6 @@ group = 'kkdad'
 version = '0.0.1-SNAPSHOT'
 
 dependencies {
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'com.google.code.gson:gson:2.8.7'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.guava:guava:30.1.1-jre'
@@ -34,6 +33,11 @@ dependencies {
 	implementation 'ch.qos.logback:logback-core:1.2.5'
 
 	implementation(project(':ComicViewer'))
+
+	implementation 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
@@ -46,7 +50,6 @@ dependencies {
 
 	testImplementation 'commons-io:commons-io:2.11.0'
 
-	//asciidoctor 'org.springframework.restdocs:spring-restdocs-asciidoctor:1.2.6.RELEASE'
 	implementation 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.5.RELEASE'
 }
 
