--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "buildProd": "ng build --prod",
+    "buildProd": "ng build --configuration production",
     "buildDev": "ng build",
     "buildWatch": "ng build --watch=true"
   },
@@ -32,7 +32,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "~6.6.7",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.7"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^12.2.18",
