--- a/ComicViewer/Dockerfile
+++ b/ComicViewer/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:14.17.0-alpine as build-step
+FROM node:16 as build-step
 
 RUN mkdir -p /app
 WORKDIR /app
@@ -11,6 +11,7 @@ RUN npm run build --prod
 
 FROM nginx:1.20.1
 COPY --from=build-step /app/dist/ComicViewer /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 
 EXPOSE 4200:80
 
