--- a/ComicViewer/.eslintrc.json
+++ b/ComicViewer/.eslintrc.json
@@ -1,51 +1,41 @@
 {
   "root": true,
-  "ignorePatterns": [
-    "projects/**/*"
-  ],
+  "ignorePatterns": ["projects/**/*"],
   "overrides": [
-    {
-      "files": [
-        "*.ts"
-      ],
-      "parserOptions": {
-        "project": [
-          "tsconfig.json",
-          "e2e/tsconfig.json"
-        ],
-        "createDefaultProgram": true
+      {
+          "files": ["*.ts"],
+          "parserOptions": {
+              "project": ["tsconfig.json"],
+              "createDefaultProgram": true
+          },
+          "extends": [
+              "plugin:@angular-eslint/recommended",
+              "plugin:@angular-eslint/template/process-inline-templates"
+          ],
+          "rules": {
+              "@angular-eslint/directive-selector": [
+                  "error",
+                  {
+                      "type": "attribute",
+                      "prefix": "app",
+                      "style": "camelCase"
+                  }
+              ],
+              "@angular-eslint/component-selector": [
+                  "error",
+                  {
+                      "type": "element",
+                      "prefix": "app",
+                      "style": "kebab-case"
+                  }
+              ],
+              "@angular-eslint/no-empty-lifecycle-method": "off"
+          }
       },
-      "extends": [
-        "plugin:@angular-eslint/recommended",
-        "plugin:@angular-eslint/template/process-inline-templates"
-      ],
-      "rules": {
-        "@angular-eslint/component-selector": [
-          "error",
-          {
-            "prefix": "app",
-            "style": "kebab-case",
-            "type": "element"
-          }
-        ],
-        "@angular-eslint/directive-selector": [
-          "error",
-          {
-            "prefix": "app",
-            "style": "camelCase",
-            "type": "attribute"
-          }
-        ]
+      {
+          "files": ["*.html"],
+          "extends": ["plugin:@angular-eslint/template/recommended"],
+          "rules": {}
       }
-    },
-    {
-      "files": [
-        "*.html"
-      ],
-      "extends": [
-        "plugin:@angular-eslint/template/recommended"
-      ],
-      "rules": {}
-    }
   ]
 }
