--- a/ComicViewer/Dockerfile
+++ b/ComicViewer/Dockerfile
@@ -1,17 +1,19 @@
+# -- Stage 1
 FROM node:16 as build-step
 
 RUN mkdir -p /app
 WORKDIR /app
-
 COPY package.json /app
 RUN npm install
-
 COPY . /app
 RUN npm run build --prod
 
-FROM nginx:1.20.1
+# -- Stage 2
+FROM nginx:1.23
 COPY --from=build-step /app/dist/ComicViewer /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
 
-EXPOSE 4200:80
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d
+EXPOSE 80
+CMD ["nginx", "-g", "daemon off;"]
 
