--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -1,27 +1,22 @@
-buildscript {
-	ext {
-		snippetsDir = file('build/generated-snippets')
-	}
-	repositories {
-		mavenCentral()
-		maven { url "https://plugins.gradle.org/m2/" }
-	}
-	dependencies {
-		classpath 'org.springframework.boot:spring-boot-gradle-plugin:2.5.14'
-		classpath 'gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.22.2'
-		classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.6.1'
+plugins {
+	id 'org.springframework.boot' version '2.7.4'
+	id 'io.spring.dependency-management' version '1.0.14.RELEASE'
+	id 'com.coditory.integration-test' version '1.3.0'
+	id 'java'
+}
+
+group = 'kkdad'
+version = '1.0.0-SNAPSHOT'
+
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
 	}
 }
 
-apply plugin: 'java'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.palantir.docker'
-apply plugin: 'org.asciidoctor.convert'
-
-
-group = 'kkdad'
-version = '0.0.1-SNAPSHOT'
+repositories {
+	mavenCentral()
+}
 
 dependencies {
 	implementation 'com.google.code.gson:gson:2.9.0'
@@ -29,67 +24,30 @@ dependencies {
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'org.jsoup:jsoup:1.15.3'
 
-	implementation(project(':ComicViewer'))
+	compileOnly 'org.projectlombok:lombok'
 
-	implementation 'org.projectlombok:lombok:1.18.24'
-	testImplementation 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+	annotationProcessor 'org.projectlombok:lombok'
 
+	testCompileOnly 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc:2.0.3.RELEASE'
-
-	testImplementation 'junit:junit:4.13.2'
-	testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
-	testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
-
-	testImplementation 'commons-io:commons-io:2.11.0'
-
-	implementation 'org.springframework.restdocs:spring-restdocs-asciidoctor:2.0.6.RELEASE'
 }
 
-jar {
-	dependsOn asciidoctor
-	from ("${asciidoctor.outputDir}/html5") {
-		into 'static/docs'
-	}
+tasks.named('test') {
+	useJUnitPlatform()
 }
 
+//docker {
+//	name "${project.group}/${bootJar.baseName}"
+//	copySpec.from(tasks.unpack.outputs).into("dependency")
+//	buildArgs(['DEPENDENCY': "dependency"])
+//}
 
-bootJar {
-	baseName = 'comic-api'
-	dependsOn asciidoctor, ':ComicViewer:buildComicViewer'
-	from ("${asciidoctor.outputDir}/html5") {
-		into 'static/docs'
-	}
-	from ("../ComicViewer/dist/ComicViewer") {
-		into 'static'
-	}
-}
-
-task unpack(type: Copy) {
-	dependsOn bootJar
-	from(zipTree(tasks.bootJar.outputs.files.singleFile))
-	into("build/dependency")
-}
-
-docker {
-	name "${project.group}/${bootJar.baseName}"
-	copySpec.from(tasks.unpack.outputs).into("dependency")
-	buildArgs(['DEPENDENCY': "dependency"])
-}
-
-test {
-	outputs.dir snippetsDir
-}
-
-asciidoctor {
-	inputs.dir snippetsDir
-	dependsOn test
-}
 
 bootRun  {
 	main = "org.stapledon.api.ComicApiApplication"
+}
+
+springBoot {
+	buildInfo()
 }
