--- a/ComicAPI/src/lombok.config
+++ b/ComicAPI/src/lombok.config
@@ -1,2 +1,3 @@
 config.stopBubbling = true
 lombok.addLombokGeneratedAnnotation = true
+lombok.copyableannotations += org.springframework.beans.factory.annotation.Qualifier
