--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -20,9 +20,11 @@ repositories {
 
 dependencies {
 	implementation 'com.google.code.gson:gson:2.9.0'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'org.jsoup:jsoup:1.15.3'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 
 	compileOnly 'org.projectlombok:lombok'
 
