--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -19,7 +19,7 @@ repositories {
 }
 
 dependencies {
-	implementation 'com.google.code.gson:gson:2.9.0'
+	implementation 'com.google.code.gson:gson:2.9.1'
 	implementation 'com.google.guava:guava:31.1-jre'
 	implementation 'org.jsoup:jsoup:1.15.3'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.11'
@@ -47,7 +47,7 @@ tasks.withType(Test) {
 
 
 bootRun  {
-	main = "org.stapledon.api.ComicApiApplication"
+	main = "org.stapledon.ComicApiApplication"
 }
 
 springBoot {
