--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.security.user.name=user
 spring.security.user.password=voicebox1@
 spring.output.ansi.enabled=always
 spring.profiles.active=production
+
+
+dailyrunner.enabled=true
+startup.reconcile.enabled=true
+
+comics.cache.location=C:/comics
+comics.cache.config=./comics.json
