--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,16 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
       with:
         arguments: build -x integrationTest
+    - name: Store reports
+
+      uses: actions/upload-artifact@v3
+      if: failure()
+      with:
+        name: linux-reports
+        path: build/reports/
+        retention-days: 5
