Change background to smooth gradient

--- a/ComicViewer/.vscode/launch.json
+++ b/ComicViewer/.vscode/launch.json
@@ -2,6 +2,13 @@
     "version": "0.2.0",
     "configurations": [
       {
+        "name": "Ng Serve",
+        "type": "chrome",
+        "request": "launch",
+        "preLaunchTask": "npm: start",
+        "webRoot": "${workspaceFolder}"
+      },
+      {
         "name": "Launch Chrome",
         "type": "chrome",
         "request": "launch",
