--- a/ComicAPI/Dockerfile
+++ b/ComicAPI/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:11.0.16.1_1-jre
+FROM eclipse-temurin:17-jre-alpine
 LABEL MAINTAINER="adrian@gilbert.ca"
 VOLUME /tmp
 
@@ -6,4 +6,4 @@ EXPOSE 8888
 
 COPY build/libs/ComicAPI-1.0.0-SNAPSHOT.jar /
 
-ENTRYPOINT [ "java", "-jar", "/ComicAPI-1.0.0-SNAPSHOT.jar" ]
+ENTRYPOINT [ "java", "-jar", "/ComicAPI-1.2.0-SNAPSHOT.jar" ]
