--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,6 @@ subprojects {
         mavenCentral()
     }
 
-    sourceCompatibility = 1.11
+    sourceCompatibility = 1.17
+    targetCompatibility = 1.17
 }
