--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -54,8 +54,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~10.9.1",
-    "typescript": "~4.6.4"
+    "ts-node": "~10.9.1"
   },
   "packageManager": "yarn@3.2.1"
 }
