--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -1,12 +1,13 @@
 plugins {
-	id 'org.springframework.boot' version '3.1.5'
-	id 'io.spring.dependency-management' version '1.1.3'
-	id 'com.coditory.integration-test' version '1.4.5'
-	id 'java'
+	id "org.springframework.boot" version '3.2.1'
+	id "io.spring.dependency-management" version '1.1.3'
+	id "com.coditory.integration-test" version '1.4.5'
+	id "java"
 }
 
 group = 'kkdad'
 version = '1.2.0-SNAPSHOT'
+sourceCompatibility = '17'
 
 configurations {
 	compileOnly {
@@ -21,7 +22,7 @@ repositories {
 dependencies {
 	implementation 'com.google.code.gson:gson:2.10.1'
 	implementation 'com.google.guava:guava:32.1.2-jre'
-	implementation 'org.jsoup:jsoup:1.16.2'
+	implementation 'org.jsoup:jsoup:1.17.1'
 	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
