--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/java,gradle,angular,intellij
 /ComicViewer/.yarn/
+
+**/.claude/settings.local.json
