Springboot Updates and cleanup deprecations

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -5,6 +5,11 @@ spring.security.user.password=voicebox1@
 spring.output.ansi.enabled=always
 spring.profiles.active=production
 
+# OpenAPI Configuration
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.show-actuator=true
+springdoc.swagger-ui.operationsSorter=method
 
 dailyrunner.enabled=true
 startup.reconcile.enabled=true
