--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ subprojects {
         mavenCentral()
     }
 
-    sourceCompatibility = 21
-    targetCompatibility = 21
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(21)
+        }
+    }
 }
