--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -1,13 +1,18 @@
 plugins {
 	id "com.coditory.integration-test" version '2.2.5'
 	id "io.spring.dependency-management" version '1.1.7'
-	id "org.springframework.boot" version '3.4.4'
+	id "org.springframework.boot" version '3.4.5'
 	id "java"
 }
 
 group = 'kkdad'
 version = '1.2.0-SNAPSHOT'
-sourceCompatibility = '21'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 configurations {
 	compileOnly {
@@ -23,7 +28,7 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.11.0'
 	implementation 'com.google.guava:guava:33.4.6-jre'
 	implementation 'org.jsoup:jsoup:1.18.1'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 
 
