Use customBootRun feature to set profile for API doc generation
- Utilize customBootRun configuration from OpenAPI Gradle plugin to specify apidocs profile
- This ensures the Spring Boot application uses the correct profile when running for API doc generation

--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -153,15 +153,10 @@ openApi {
     outputFileName.set("openapi.json")
     waitTimeInSeconds.set(30)
     
-    // Create a custom server fork for OpenAPI generation with apidocs profile
-    outputFormat.set("json")
-    executionTimeout.set(60000L)
-    
-    // Server configuration
-    server {
-        // Pass the apidocs profile to the Spring Boot application
-        serverStartCommand.set("${project.getRootDir().getAbsolutePath()}/gradlew :ComicAPI:bootRun --args='--spring.profiles.active=apidocs'")
-        serverStopCommand.set("kill -9 \$(lsof -t -i:8888)")
+    // Configure the Spring Boot application to use the 'apidocs' profile
+    // This will disable comic caching during API docs generation
+    customBootRun {
+        args = ["--spring.profiles.active=apidocs"]
     }
 }
 
