Create shell script for OpenAPI doc generation
- Add shell script to generate OpenAPI docs without Spring plugin issues
- Update Gradle task to use the script instead of plugin
- This approach avoids SpringDoc compatibility issues while still using the apidocs profile

--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -212,13 +212,12 @@ tasks.named('compileTestJava') {
     mustRunAfter 'generateOpenApiDocs'
 }
 
-// Define task to copy generated OpenAPI docs to the docs directory
+// Task to use shell script to generate OpenAPI docs
 tasks.register("updateApiDocs") {
-    dependsOn 'generateOpenApiDocs'
     doLast {
-        copy {
-            from "${project.buildDir}/openapi.json"
-            into "../docs"
+        exec {
+            workingDir project.projectDir
+            commandLine "./generate-openapi-docs.sh"
         }
     }
 }
