Add task execution tracking to ensure operations run once per day
- Created TaskExecutionTracker interface and implementation
- Modified DailyRunner to use task tracking for once-daily execution
- Modified StartupReconciler to use task tracking for once-daily execution
- Added unit and integration tests for task execution tracking
- Updated README with new guaranteed once-daily execution feature

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -18,6 +18,7 @@ comics.cache.location=C:/comics
 comics.cache.config=./comics.json
 comics.cache.usersConfig=./users.json
 comics.cache.preferencesConfig=./preferences.json
+# Task execution tracker will store execution data in task-executions.json in the cache location
 
 # JWT Configuration
 jwt.secret=your-secret-key-should-be-very-long-and-secure-in-production-environment
