Verbose EP logging

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.security.user.password=voicebox1@
 spring.output.ansi.enabled=always
 spring.profiles.active=production
 
+# Logging configuration for API endpoints
+logging.level.web=INFO
+logging.level.org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping=TRACE
+
 # OpenAPI Configuration
 springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
