Add OS-specific cache path handling and fix OpenAPI version compatibility
- Add OS-specific path normalization in CacheConfiguration to handle paths correctly on all platforms
- Update CacheConfigurationTest with tests for OS-specific path handling
- Downgrade SpringDoc OpenAPI UI from 2.5.0 to 2.4.0 to fix compatibility issues with Spring Boot 3.4.5
- Update application.properties to support COMICS_CACHE_LOCATION environment variable

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -18,7 +18,10 @@ springdoc.swagger-ui.operationsSorter=method
 dailyrunner.enabled=true
 startup.reconcile.enabled=true
 
-comics.cache.location=C:/comics
+# Default cache location - will be normalized to appropriate OS path
+# Windows: Uses C:/comics if drive exists, otherwise ~/comics
+# Linux/macOS: Uses ~/comics if path starts with a drive letter, otherwise uses as-is
+comics.cache.location=${COMICS_CACHE_LOCATION:C:/comics}
 comics.cache.config=./comics.json
 comics.cache.usersConfig=./users.json
 comics.cache.preferencesConfig=./preferences.json
