Implement daily reconciliation scheduling and add unit tests for StartupReconciler

--- a/ComicAPI/src/main/resources/application.properties
+++ b/ComicAPI/src/main/resources/application.properties
@@ -17,6 +17,7 @@ springdoc.swagger-ui.operationsSorter=method
 
 dailyrunner.enabled=true
 startup.reconcile.enabled=true
+startup.reconcile.scheduleTime=06:00:00
 
 # Default cache location - will be normalized to appropriate OS path
 # Windows: Uses C:/comics if drive exists, otherwise ~/comics
