feat: Add health check endpoint and related services
- Implemented HealthController to provide application health status.
- Created HealthService and HealthServiceImpl for health status logic.
- Added DTOs for health status, cache status, build info, and system resources.
- Introduced TestIntegrationConfiguration for integration tests.
- Updated application-integration.properties for cache configuration.
- Added unit tests for HealthController and HealthServiceImpl.
- Documented health endpoint in health-endpoint.md.
- Removed obsolete TaskExecutionTrackerImplTest.
- Added testAll task in build.gradle to run all unit tests.

--- a/ComicAPI/src/integration/resources/application-integration.properties
+++ b/ComicAPI/src/integration/resources/application-integration.properties
@@ -15,10 +15,10 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Cache properties for integration tests
-cache.location=./integration-cache
-cache.config=./integration-comics.json
-cache.users.config=./integration-users.json
-cache.preferences.config=./integration-preferences.json
+cache.location=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache
+cache.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-comics.json
+cache.users.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-users.json
+cache.preferences.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-preferences.json
 
 # Disable scheduled tasks in tests
 daily.runner.enabled=false
