Phase 4.5: Update module dependencies and fix imports
Updated module dependencies:
- comic-metrics: Now depends on comic-common (and temporarily ComicAPI for infrastructure)
- comic-engine: Now depends on comic-common (and temporarily ComicAPI for infrastructure)
- ComicAPI: Now depends on comic-common

Fixed all imports across all modules:
- org.stapledon.api.dto.comic → org.stapledon.common.dto
- org.stapledon.core.comic.dto → org.stapledon.common.dto
- org.stapledon.infrastructure.config.properties.CacheProperties → org.stapledon.common.config.CacheProperties
- org.stapledon.infrastructure.storage.ComicStorageFacade → org.stapledon.common.service.ComicStorageFacade
- org.stapledon.core.comic.service.RetrievalStatusRepository → org.stapledon.common.repository.RetrievalStatusRepository

All modules compile successfully:
- comic-common ✓
- comic-metrics ✓
- comic-engine ✓
- ComicAPI ✓

Note: Some test compilation errors remain (mock objects using old imports)
These will be fixed in next commit

Key Achievement: Circular dependency resolved!
- comic-common is base module (no circular deps)
- All shared types now in one place

--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -68,6 +68,9 @@ repositories {
 }
 
 dependencies {
+	// Module dependencies
+	implementation project(':comic-common')
+
 	// Core dependencies
 	implementation "com.google.code.gson:gson:${gsonVersion}"
 	implementation "com.google.guava:guava:${guavaVersion}"
