--- a/comic-engine/build.gradle
+++ b/comic-engine/build.gradle
@@ -31,8 +31,10 @@ repositories {
 }
 
 dependencies {
-	// ComicAPI dependency for shared types and infrastructure
-	// TODO: Phase 6 will extract these to comic-common module
+	// comic-common dependency for shared types
+	implementation project(':comic-common')
+
+	// ComicAPI for infrastructure (temporary - TODO: extract to separate module)
 	implementation project(':ComicAPI')
 
 	// Core dependencies
